--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
           <p class="subtitle">Centralize tudo em um só lugar: fotos das partidas e cadastro de novos jogadores.</p>
           <div class="actions">
             <a class="btn" id="link-fotos" href="https://drive.google.com/drive/folders/SEU_LINK_DO_DRIVE_AQUI" target="_blank" rel="noopener">📸 Ver fotos das partidas</a>
-            <a class="btn secondary" id="link-cadastro" href="https://forms.gle/SEU_LINK_DO_FORMULARIO_AQUI" target="_blank" rel="noopener">📝 Cadastrar novos jogadores</a>
+            <a class="btn secondary" id="link-cadastro" href="https://forms.gle/rsRsMXsavuUjDGyw6" target="_blank" rel="noopener">📝 Cadastrar novos jogadores</a>
           </div>
-          <p class="subtitle" style="margin-top:10px">Substitua os links acima pelo seu Google Drive e seu formulário de cadastro.</p>
+          <p class="subtitle" style="margin-top:10px">:)</p>
         </div>
 
         <div class="card panel idealizador" id="idealizador" style="margin-top:16px">
