--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     /* ===== Fundo com imagem e overlay na seção #contador ===== */
     #contador {
-      background-image: url("https://i.ibb.co/fVnGYGZc/banner-iroko.jpg");
+      background-image: url("https://i.ibb.co/x8mTb7XL/logooooiko.jpg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -165,12 +165,12 @@
       <aside class="panel">
         <div class="card panel" id="links">
           <h2 style="margin-top:0">Links rápidos</h2>
-          <p class="subtitle">Centralize tudo em um só lugar: fotos das partidas e cadastro de novos jogadores.</p>
+          <p class="subtitle"></p>
           <div class="actions">
             <a class="btn" id="link-fotos" href="https://drive.google.com/drive/folders/SEU_LINK_DO_DRIVE_AQUI" target="_blank" rel="noopener">📸 Ver fotos das partidas</a>
             <a class="btn secondary" id="link-cadastro" href="https://forms.gle/rsRsMXsavuUjDGyw6" target="_blank" rel="noopener">📝 Cadastrar novos jogadores</a>
           </div>
-          <p class="subtitle" style="margin-top:10px">:)</p>
+          <p class="subtitle" style="margin-top:10px"></p>
         </div>
 
         <div class="card panel idealizador" id="idealizador" style="margin-top:16px">
