--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <a class="btn" id="link-fotos" href="https://drive.google.com/drive/folders/SEU_LINK_DO_DRIVE_AQUI" target="_blank" rel="noopener">📸 Ver fotos das partidas</a>
             <a class="btn secondary" id="link-cadastro" href="https://forms.gle/rsRsMXsavuUjDGyw6" target="_blank" rel="noopener">📝 Cadastrar novos jogadores</a>
           </div>
-          <p class="subtitle" style="margin-top:10px"></p>
+          <p class="subtitle" style="margin-top:10px">Nosso acervo conta com mais de 240 jogos de tabuleiros modernos</p>
         </div>
 
         <div class="card panel idealizador" id="idealizador" style="margin-top:16px">
