--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           <h2 style="margin-top:0">Links rápidos</h2>
           <p class="subtitle"></p>
           <div class="actions">
-            <a class="btn" id="link-fotos" href="https://drive.google.com/drive/folders/SEU_LINK_DO_DRIVE_AQUI" target="_blank" rel="noopener">📸 Ver fotos das partidas</a>
+            <a class="btn" id="link-fotos" href="https://www.instagram.com/clubedetabuleiroiroko/" target="_blank" rel="noopener">📸 Ver fotos das partidas</a>
             <a class="btn secondary" id="link-cadastro" href="https://forms.gle/rsRsMXsavuUjDGyw6" target="_blank" rel="noopener">📝 Cadastrar novos jogadores</a>
           </div>
           <p class="subtitle" style="margin-top:10px">Nosso acervo conta com mais de 240 jogos de tabuleiros modernos</p>
