--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <div class="card panel idealizador" id="idealizador" style="margin-top:16px">
           <h2 style="margin-top:0">Idealizador do Clube</h2>
           <div class="bio">
-          <img src="https://i.ibb.co/sdGj0Stg/miro.jpg" alt="miro" border="0"/>
+          <img src="https://i.ibb.co/sdGj0Stg/miro.jpg" alt="miro"/>
           </div>
           <div>
             <div class="tag">Idealizador</div>
