--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
           <div class="actions">
             <a class="btn" id="link-fotos" href="https://www.instagram.com/clubedetabuleiroiroko/" target="_blank" rel="noopener">📸 Ver fotos das partidas</a>
             <a class="btn secondary" id="link-cadastro" href="https://forms.gle/rsRsMXsavuUjDGyw6" target="_blank" rel="noopener">📝 Cadastrar novos jogadores</a>
+            <a class="btn secondary" id="link-cadastro" href="https://lookerstudio.google.com/reporting/354dd190-e06f-450b-8f09-b87d6a32260c" target="_blank" rel="noopener">📊 Jogos e Partidas</a>
           </div>
           <p class="subtitle" style="margin-top:10px">Nosso acervo conta com mais de 240 jogos de tabuleiros modernos</p>
         </div>
